--- a/index.html
+++ b/index.html
@@ -5,33 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Content Loader v1</title>
-  <style>
-    table {
-      width:100%;
-    }
-    table, th, td {
-      border: 1px solid black;
-      border-collapse: collapse;
-    }
-    th, td {
-      padding: 15px;
-      text-align: left;
-    }
-    #t01 tr:nth-child(even) {
-      background-color: #eee;
-    }
-    #t01 tr:nth-child(odd) {
-     background-color: #fff;
-    }
-    #t01 th {
-      background-color: black;
-      color: white;
-    }
-    </style>
 </head>
 
 <body>
-  <div id="APICONTENTLOADER-root" data-id="1ee895ee-6f95-6c22-8f83-ef72993f7122" data-module="APICONTENTLOADER" data-version="v1" data-content-link="http://localhost:5174/text.html"></div>
+  <div id="APICONTENTLOADER-root" data-id="1ee895ee-6f95-6c22-8f83-ef72993f7122" data-module="APICONTENTLOADER" data-version="v1" data-content-link="http://localhost:5174/test_content.html"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
